<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/grey_profile_image"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/profile_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toEndof="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/profile_email"
        android:textColor="@color/secondary"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:text="@string/PN1"
        android:textColor="@color/secondary"
        android:fontFamily="@font/sf_pro_text_medium"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:text="@string/PN2"
        android:textColor="@color/secondary"
        android:fontFamily="@font/sf_pro_text_medium"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:text="@string/PN3"
        android:textColor="@color/secondary"
        android:fontFamily="@font/sf_pro_text_medium"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:text="@string/PN4"
        android:textColor="@color/secondary"
        android:fontFamily="@font/sf_pro_text_medium"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:text="@string/PN5"
        android:textColor="@color/secondary"
        android:fontFamily="@font/sf_pro_text_medium"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="120dp" />


</androidx.constraintlayout.widget.ConstraintLayout>